图片帖子细节待完成

--- a/百思不得姐/百思不得姐/Classes/FriendTrend/View/YRHUserViewCell.xib
+++ b/百思不得姐/百思不得姐/Classes/FriendTrend/View/YRHUserViewCell.xib
@@ -31,8 +31,8 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小蘑菇" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rGp-p1-Ly3">
-                        <rect key="frame" x="70" y="24" width="37" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="xxx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rGp-p1-Ly3">
+                        <rect key="frame" x="70" y="24" width="19" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="Ekj-ww-afe"/>
                         </constraints>
