--- a/百思不得姐/百思不得姐/Classes/FriendTrend/Controller/YRHFriendTrendController.xib
+++ b/百思不得姐/百思不得姐/Classes/FriendTrend/Controller/YRHFriendTrendController.xib
@@ -48,6 +48,9 @@
                     <state key="highlighted" title="赶快注册登录吧" backgroundImage="friendsTrend_login_click">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="registBtn:" destination="-1" eventType="touchUpInside" id="g2X-mh-3x2"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
